<resources>
    <string name="app_name">QzAlert</string>
    <string name="warm_tip">温馨提示</string>
    <string name="chance">取消</string>
    <string name="confirm_name">确定</string>
    <string name="known">我知道了</string>
    <string name="iknown">我知道了</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="tip_end_time_mistake">结束时间必须大于开始时间</string>
    <string name="confirm">确定</string>
    <string name="empty_data">暂无数据</string>
    <string name="until_name">至</string>
    <string name="sel_all">全选</string>
    <string name="clear">清空</string>
</resources>