<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/start_time_title_ll"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <View
                android:layout_width="3dp"
                android:layout_height="25dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/start_time_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/start_time"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/start_time_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F5F5F5"
            android:orientation="horizontal"
            android:paddingStart="0dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <View
                android:layout_width="3dp"
                android:layout_height="25dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/end_time_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/end_time"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/end_time_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F5F5F5"
            android:orientation="horizontal"
            android:paddingStart="0dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp" />
    </LinearLayout>

    <View
        android:id="@+id/bottom_v"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true" />

    <TextView
        android:id="@+id/confirm_tv"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_above="@+id/bottom_v"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/circle_solid_blue_bg"
        android:elevation="5dp"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="14sp" />
</RelativeLayout>