<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="280dp"
    android:layout_height="match_parent"
    android:background="#f5f5f5">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/multi_top_item_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:elevation="3dp"
        android:gravity="start"
        android:orientation="vertical"
        android:visibility="gone">

        <androidx.constraintlayout.helper.widget.Layer
            android:id="@+id/content_ly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:constraint_referenced_ids="top_item_cb,top_item_tv"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/top_item_cb"
            style="@style/checkBoxStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="1dp"
            android:clickable="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/top_item_tv"
            style="@style/checkBoxStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="1dp"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/top_item_cb"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line_v"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/line_gray"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/multi_top_item_cl"
        android:background="#f5f5f5"
        android:minHeight="300dp"
        android:orientation="horizontal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/parent_rv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:paddingBottom="80dp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/children_rv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:paddingBottom="80dp"
            android:visibility="gone" />
    </LinearLayout>

    <View
        android:id="@+id/bottom_v"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true" />

    <TextView
        android:id="@+id/sel_all_tv"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_above="@+id/bottom_v"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/circle_gray_solid_bg"
        android:elevation="3dp"
        android:gravity="center"
        android:maxLines="1"
        android:paddingHorizontal="20dp"
        android:text="@string/sel_all"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/confirm_tv"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_above="@+id/bottom_v"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:layout_toEndOf="@+id/sel_all_tv"
        android:background="@drawable/circle_solid_blue_bg"
        android:elevation="3dp"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="gone"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/loading_pb"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerInParent="true"
        android:elevation="5dp"
        android:progress="50"
        android:visibility="gone" />
</RelativeLayout>