<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/big_top_corner_gray_bg"
    android:elevation="5dp"
    android:minHeight="200dp">

    <FrameLayout
        android:id="@+id/top_fl"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/big_top_corner_white_bg"
        android:elevation="0.5dp"
        app:layout_constraintBottom_toTopOf="@+id/multi_top_item_cl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <View
            android:id="@+id/top_v"
            android:layout_width="50dp"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:background="@drawable/corner_gray_solid_bg" />
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/multi_top_item_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/bg_gray"
        android:elevation="1dp"
        android:gravity="start"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/content_ll"
        app:layout_constraintTop_toBottomOf="@+id/top_fl"
        tools:visibility="visible">

        <CheckBox
            android:id="@+id/top_item_cb"
            style="@style/checkBoxStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="1dp"
            android:clickable="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/top_item_tv"
            style="@style/checkBoxStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="1dp"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/top_item_cb"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/content_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multi_top_item_cl">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/parent_rv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            android:overScrollMode="never"
            android:paddingBottom="80dp"
            tools:itemCount="160"
            tools:listitem="@layout/item_filter_common" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/children_rv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            android:overScrollMode="never"
            android:paddingBottom="80dp"
            android:visibility="gone"
            tools:itemCount="160"
            tools:listitem="@layout/item_filter_common"
            tools:visibility="visible" />
    </LinearLayout>


    <TextView
        android:id="@+id/sel_all_tv"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/circle_gray_solid_bg"
        android:elevation="3dp"
        android:gravity="center"
        android:maxLines="1"
        android:paddingHorizontal="20dp"
        android:text="@string/sel_all"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/confirm_tv"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/confirm_tv"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_toEndOf="@+id/sel_all_tv"
        android:background="@drawable/circle_solid_blue_bg"
        android:elevation="3dp"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sel_all_tv"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/loading_pb"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:elevation="5dp"
        android:progress="50"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>